# Deepship

./: .gitignore  README.md  package-lock.json  tracehub_architecture.js
.c/: settings.local.json
.claude/: settings.local.json
Backend/: .env  .env.example  requirements.txt  test_e2e.py  test_flow.py  worker_main.py
Backend/app/: config.py  database.py  dependencies.py  main.py
Backend/app/admin/: router.py  schemas.py  service.py
Backend/app/ai/: router.py
Backend/app/auth/: router.py  schemas.py  service.py
Backend/app/ingestion/: router.py  schemas.py  service.py
Backend/app/issues/: router.py  schemas.py  service.py
Backend/app/join_requests/: router.py
Backend/app/logs/: router.py  schemas.py  service.py
Backend/app/organizations/: router.py
Backend/app/projects/: router.py
Backend/app/queue/: consumer.py  publisher.py
Backend/app/stats/: router.py  schemas.py  service.py
Backend/app/worker/: fingerprint.py  processor.py
Database/: create_db.py  setup_database.py
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.css  App.tsx  index.css  main.tsx
Frontend/src/components/: ProtectedRoute.tsx
Frontend/src/components/Admin/: AdminDashboard.tsx  AdminProjectsPage.tsx  AdminSettingsPage.tsx  DevelopersPage.tsx  ManageOrgPage.tsx  OrganizationsPage.tsx
Frontend/src/components/Dashboard/: Dashboard.tsx
Frontend/src/components/Developer/: BrowsePage.tsx  DeveloperDashboard.tsx  DeveloperProfilePage.tsx  InvitationsPage.tsx  MyProjectsPage.tsx  ProjectLogs.tsx
Frontend/src/components/Issues/: IssuesPage.tsx
Frontend/src/components/LandingPage/: AboutSection.tsx  CTASection.tsx  ContactSection.tsx  FeaturesGrid.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  StatsBar.tsx
Frontend/src/components/Layout/: DashboardLayout.tsx
Frontend/src/components/LogExplorer/: LogExplorer.tsx
Frontend/src/components/LoginPage/: LoginPage.tsx
Frontend/src/components/Manager/: JoinRequestsPage.tsx  ManagerDashboard.tsx  ProjectDetail.tsx  ProjectsListPage.tsx
Frontend/src/components/Projects/: ProjectsPage.tsx
Frontend/src/components/Sidebar/: Sidebar.tsx
Frontend/src/components/SignupPage/: SignupPage.tsx
Frontend/src/components/Teams/: TeamsPage.tsx
Frontend/src/components/shared/: ProjectDetailDrawer.tsx
Frontend/src/components/ui/: SplitText.tsx  TextType.css  TextType.tsx  button.tsx
Frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
Frontend/src/services/: api.ts
JAVA_SDK_Test/: README.md  pom.xml
JAVA_SDK_Test/src/main/java/com/financetracker/config/: GlobalExceptionHandler.java  TraceHubConfiguration.java
JAVA_SDK_Test/src/main/java/com/financetracker/controller/: PlaygroundController.java  TransactionController.java
JAVA_SDK_Test/src/main/java/com/financetracker/model/: Transaction.java
JAVA_SDK_Test/src/main/resources/: application.properties
JAVA_SDK_Test/src/main/resources/static/: app.js
SDK/: README.md  pyproject.toml
SDK/C_SDK/: CMakeLists.txt  README.md
SDK/C_SDK/examples/: basic_usage.cpp
SDK/C_SDK/include/tracehub/: batcher.h  buffer.h  client.h  enricher.h  exceptions.h  models.h  serializer.h  tracehub.h  transport.h
SDK/C_SDK/tests/: test_buffer.cpp  test_enricher.cpp  test_exceptions.cpp  test_models.cpp  test_serializer.cpp
SDK/Java_SDK/: README.md  pom.xml
SDK/Java_SDK/examples/: BasicUsage.java
SDK/Java_SDK/src/main/java/com/tracehub/sdk/: BatchWorker.java  DeadLetterQueue.java  Enricher.java  HttpTransport.java  LogEntry.java  LogLevel.java  RingBuffer.java  Serializer.java  TraceHubConfig.java  TraceHubConfigError.java  TraceHubError.java  TraceHubLogger.java  TraceHubTransportError.java
SDK/Java_SDK/src/main/java/com/tracehub/sdk/integrations/: TraceHubAutoConfiguration.java  TraceHubFilter.java
SDK/Java_SDK/src/test/java/com/tracehub/sdk/: EnricherTest.java  ExceptionsTest.java  LogEntryTest.java  LogLevelTest.java  RingBufferTest.java  SerializerTest.java
SDK/sentinel_sdk/: __init__.py  batcher.py  buffer.py  client.py  enricher.py  exceptions.py  models.py  serializer.py  transport.py
SDK/sentinel_sdk/integrations/: django.py  fastapi.py  flask.py
SDK/tests/: test_batcher.py  test_buffer.py  test_client.py  test_enricher.py  test_exceptions.py  test_integration_rabbitmq.py  test_models.py  test_serializer.py  test_transport.py
SDK/tracehub/: __init__.py  batcher.py  buffer.py  client.py  enricher.py  exceptions.py  models.py  serializer.py  transport.py
SDK/tracehub/integrations/: django.py  fastapi.py  flask.py
(+2 files in other folders)
