[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracehub-logger"
version = "1.2.0"
description = "Lightweight, non-blocking Python SDK for TraceHub log ingestion and error tracking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["logging", "monitoring", "error-tracking", "tracehub", "observability", "tracing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
django = []
fastapi = ["starlette"]
flask = ["flask"]
rabbitmq = ["pika>=1.3"]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.30",
    "pika>=1.3",
]

[project.urls]
Homepage = "http://103.127.146.14"
Documentation = "http://103.127.146.14/docs"
Repository = "https://github.com/tracehub/sdk"
"Bug Tracker" = "https://github.com/tracehub/sdk/issues"

[tool.setuptools.packages.find]
include = ["tracehub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
